--- a/solutions.web-maintenance.html
+++ b/solutions.web-maintenance.html
@@ -491,8 +491,8 @@
             </div>
             <div class="footer-section">
                 <h3>Contact</h3>
-                <p>Email: jvyapars@gmail.com</p>
-                <p> Founder Email: yubrajdhakal0707@gmail.com</p>
+                <p> Email: info@jvstudio.com.np</p>
+                <p> Founder Email: ceo@jvstudio.com.np </p>
                 <p>Phone: (+977) 9705997062</p>
                 <p>Address: Bhairahawa, Nepal</p>    
             </div>
