--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                 <h1>Build Your Brand</h1>
                 <p>Launch your brand into the stratosphere with JV Studio's comprehensive solutions</p>
                 <div class="hero-buttons">
-                    <button class="primary-btn">Get Started</button>
-                    <button class="secondary-btn">Learn More</button>
+                    <a href="contact.html"><button class="primary-btn">Get Started</button></a>
+                   <a href="profile.introduction.html"> <button class="secondary-btn">Learn More</button> </a>
                 </div>
                 <img src="photo/index.png" alt="Astronaut" class="astronaut">
             </div>
