--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <p>Launch your brand into the stratosphere with JV Studio's comprehensive solutions</p>
                 <div class="hero-buttons">
                     <a href="contact.html"><button class="primary-btn">Get Started</button></a>
-                   <a href="profile.introduction.html"> <button class="secondary-btn">Learn More</button> </a>
+                   <a href="profile.team.html"> <button class="secondary-btn">Learn More</button> </a>
                 </div>
                 <img src="photo/index.png" alt="Astronaut" class="astronaut">
             </div>
@@ -353,7 +353,7 @@
                   If you’re looking for a team that brings creativity, agility, and next-level thinking to
                   the table, JV Studio is your answer. Let’s build something extraordinary together.
                 </p>
-                <button class="why-button">More Info</button>
+               <a href="profile.introduction.html"> <button class="why-button">More Info</button> </a>
               </div>
           
               <!-- Right Side: Animation -->
