--- a/clients.html
+++ b/clients.html
@@ -371,9 +371,9 @@
                         <div class="client-name">Nabina Curry</div>
                     </div></a> 
 
-                    <a href=""><div class="client-item">
+                    <a href="https://www.aakashphoto.com.np/"><div class="client-item">
                         <!-- <img src="photo/projects/studio.png"ExcrestCollege" class="client-logo"> -->
-                        <div class="client-name">ExcrestCollege</div>
+                        <div class="client-name">Aakash Digital Photo Studio</div>
                     </div></a> 
 
                     <a href="https://www.yubrazdhakal.com.np/"><div class="client-item">
