--- a/contact.html
+++ b/contact.html
@@ -365,7 +365,7 @@
             </div>
             <div class="info-item">
                 <i class="fas fa-envelope"></i>
-                <span>jvyapars@gmail.com</span>
+                <span>info@jvstudio.com.np</span>
             </div>
             <div class="info-item">
                 <i class="fas fa-map-marker-alt"></i>
