--- a/clients.html
+++ b/clients.html
@@ -350,7 +350,7 @@
 
 <div class="why-section">
     <div class="why-title">
-        <h2><u>Web Applicatios </u></h2>
+        <h2><u>Web Applications </u></h2>
         
         </div>
                 <div class="client-list">
